fix vertical spacing on shop page

--- a/resources/css/style-shop.css
+++ b/resources/css/style-shop.css
@@ -16,3 +16,6 @@
         width: 100%;
     }
 }
+.card { 
+    margin-bottom: 20px;
+ }
